@@ -7,7 +7,7 @@ import pandas as pd
 import yaml
 import os
 
-version = "0.3.28"
+version = "0.3.29"
 
 # Import configuration files (as defined in the main configuration)
 params = yaml.load(open(config["params-file"], "r"), Loader=yaml.SafeLoader)
