@@ -2,7 +2,6 @@
 # Define the script_folder dynamically based on the pipeline_folder
 SCRIPT_FOLDER = os.path.join(config["pipeline_folder"], "workflow", "scripts")
 
-
 READS = Path("results/reads/")
 WD = os.getcwd()
 
